add some containers to html  and put some styles on css footer and hero

--- a/landingpage1.html
+++ b/landingpage1.html
@@ -8,14 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <h3>header logo</h3>
     <ul>
-        <li>Header link one</li>
-        <li>Header link two</li>
-        <li>Header link three</li>
+        <li><a href="#"> Headter link one</a></li>
+        <li><a href="#">Header link two</a></li>
+        <li><a href="#">Header link three</a></li>
     </ul>
+    <div class="main">
     <div> website is awesome</div>
     <div>this website has some subtext that goes under the main title. It's smaller front and the color is lower contrast</div>
+    <div><button>Sign up</button></div>
     <img src="" alt="this is a placeholder for an image">
     <div><p>Some random information</p></div>
     <ul>
@@ -24,12 +27,16 @@
         <li><img src="" alt="img3"> This is some text under the image</li>
         <li><img src="" alt="img4"> This is some text under the image</li>
     </ul>
+<div class="quote">
     <div>This is an inspiring quotes, or testimonial from a customer. Maybe it's just filling up space, ormaybe people will actually
      read it. Who knows? All I know is that it looks nice.</div>
     <div>-Thor, God of Thunder</div>
+</div>
     <div>Call to action! It's Time!</div>
     <div>Sign up for our product by clicking that button right over there!</div>
     <button>Sign up</button>
-
+<div class="footer">
+    <div>Copyright @ The Odin Project 2021</div>
+</div>
 </body>
 </html>
