almost finished with all containers, included images for landing page and visited all fonts

--- a/landingpage1.html
+++ b/landingpage1.html
@@ -8,35 +8,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <h3>header logo</h3>
+<div class="herocontain">
+<div class="herosecond">
+    <div class="headertitle">header logo</div>
     <ul>
-        <li><a href="#"> Headter link one</a></li>
+        <li><a href="#">Header link one</a></li>
         <li><a href="#">Header link two</a></li>
         <li><a href="#">Header link three</a></li>
     </ul>
     <div class="main">
-    <div> website is awesome</div>
+    <div class="heromain">This website is awesome</div>
     <div>this website has some subtext that goes under the main title. It's smaller front and the color is lower contrast</div>
-    <div><button>Sign up</button></div>
-    <img src="" alt="this is a placeholder for an image">
-    <div><p>Some random information</p></div>
+</div>
+    <div><button class="signup">Sign up</button></div>
+<div class="placehold">
+    <img src="photo/image5.jpg" alt="this is a placeholder for an image" width="400" height="200">
+</div>
+</div>
+</div>
+    <div class="infotext"><p>Some random information</p></div>
+<div class="bodypics">
     <ul>
-        <li><img src="" alt="img1">  This is some text under the image</li>
-        <li><img src="" alt="img2"> This is some text under the image</li>
-        <li><img src="" alt="img3"> This is some text under the image</li>
-        <li><img src="" alt="img4"> This is some text under the image</li>
+        <li><img src="photo/image1.jpg" alt="img1"> This is some text under the image</li>
+        <li><img src="photo/image2.jpg" alt="img2"> This is some text under the image</li>
+        <li><img src="photo/image3.jpg" alt="img3"> This is some text under the image</li>
+        <li><img src="photo/image4.jpg" alt="img4"> This is some text under the image</li>
     </ul>
+</div>
+</div>
 <div class="quote">
     <div>This is an inspiring quotes, or testimonial from a customer. Maybe it's just filling up space, ormaybe people will actually
      read it. Who knows? All I know is that it looks nice.</div>
     <div>-Thor, God of Thunder</div>
 </div>
+<div class="action">
     <div>Call to action! It's Time!</div>
     <div>Sign up for our product by clicking that button right over there!</div>
-    <button>Sign up</button>
-<div class="footer">
-    <div>Copyright @ The Odin Project 2021</div>
+    <button class="signup">Sign up</button>
 </div>
+    <div class="footer">Copyright @ The Odin Project 2021</div>
 </body>
 </html>
