fix image classes to resize photos correctly

--- a/landingpage1.html
+++ b/landingpage1.html
@@ -29,10 +29,10 @@
     <div class="infotext"><p>Some random information</p></div>
 <div class="bodypics">
     <ul>
-        <li><img src="photo/image1.jpg" alt="img1"> This is some text under the image</li>
-        <li><img src="photo/image2.jpg" alt="img2"> This is some text under the image</li>
-        <li><img src="photo/image3.jpg" alt="img3"> This is some text under the image</li>
-        <li><img src="photo/image4.jpg" alt="img4"> This is some text under the image</li>
+        <li><img src="photo/image1.jpg" class="picmid" alt="img1"> This is some text under the image</li>
+        <li><img src="photo/image2.jpg" class="picmid" alt="img2"> This is some text under the image</li>
+        <li><img src="photo/image3.jpg" class="picmid" alt="img3"> This is some text under the image</li>
+        <li><img src="photo/image4.jpg" class="picmid" alt="img4"> This is some text under the image</li>
     </ul>
 </div>
 </div>
