fix the header position, center pictures and add containers around quotes-footer

--- a/landingpage1.html
+++ b/landingpage1.html
@@ -40,6 +40,7 @@
     </ul>
 </div>
 </div>
+<div class="container">
 <div class="quote">
     <div>This is an inspiring quotes, or testimonial from a customer. Maybe it's just filling up space, ormaybe people will actually
      read it. Who knows? All I know is that it looks nice.</div>
@@ -49,6 +50,7 @@
     <div>Call to action! It's Time!</div>
     <div>Sign up for our product by clicking that button right over there!</div>
     <button class="signup">Sign up</button>
+</div>
 </div>
     <div class="footer">Copyright @ The Odin Project 2021</div>
 </body>
