make flexbox designs for class herocontain, main, infotext, container and footer

--- a/landingpage1.html
+++ b/landingpage1.html
@@ -40,16 +40,23 @@
     </ul>
 </div>
 </div>
+
 <div class="container">
 <div class="quote">
-    <div>This is an inspiring quotes, or testimonial from a customer. Maybe it's just filling up space, ormaybe people will actually
-     read it. Who knows? All I know is that it looks nice.</div>
-    <div>-Thor, God of Thunder</div>
+    <div>This is an inspiring quotes, or testimonial from a <div> Maybe it's just filling up space, or maybe</div> 
+    <div>will actually read it. Who knows? All I know</div> 
+    <div>it looks nice.</div>
 </div>
+    <div class="author">-Thor, God of Thunder</div>
+</div>
+<div class="actionmain">
 <div class="action">
+<div class="actionsub">
     <div>Call to action! It's Time!</div>
-    <div>Sign up for our product by clicking that button right over there!</div>
+    <div class="directions">Sign up for our product by clicking that button right over there!</div>
+</div>
     <button class="signup">Sign up</button>
+</div>
 </div>
 </div>
     <div class="footer">Copyright @ The Odin Project 2021</div>
